--- a/styles/telaInicio.css
+++ b/styles/telaInicio.css
@@ -24,3 +24,19 @@
 {
     font-size: 50px;
 }
+
+.imagem_inicio
+{
+    width: 25%; 
+    height: 40%;
+}
+
+@media screen and (max-width: 720px) 
+{
+    .imagem_inicio
+    {
+        display: none;
+    }
+
+
+}
