Seção de RH Sanguíneo

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body
         flex-direction: column;
     }
 
-    .doacaosangue
+    .invertido_secao
     {
         flex-direction: column-reverse;
     }
